# Glaze_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  logindata.hpp  main.cpp  sample.json
.github/workflows/: cmake.yml
include/classes/: loginData.hpp
include/models/: login_data.hpp
src/funcs/: login_data_funcs.cpp
src/meta/: login_data_meta.cpp
